--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # MYSQL
 spring.datasource.url=jdbc:mysql://localhost:3306/sqa-tut4-group4?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Tuanpro.8c
+spring.datasource.password=tienminh2020
 
 # JPA + HIBERNATE
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
