--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sqa-tut4-group4?createDatabase
 spring.datasource.username=root
 spring.datasource.password=tienminh2020
 
+server.port=${PORT:8080}
+
+
 # JPA + HIBERNATE
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.generate-ddl=true
