--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 # MYSQL
-spring.datasource.url=jdbc:mysql://us-cdbr-east-05.cleardb.net
-spring.datasource.username=b387ad069569df
-spring.datasource.password=a3bb6987
-
-#server.port=${PORT:8080}
-
+spring.datasource.url=jdbc:mysql://localhost:3306/sqa-tut4-group4?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=tienminh2020
 
 # JPA + HIBERNATE
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
