--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.password=tienminh2020
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+server.port=${PORT:8080}
 
 # ==============================================================
 # = Show or not log for each sql query
